# Triangle_drawing

./: .gitignore  README.md
cpu_triangle/: CMakeLists.txt  cpu_triangle.cpp
cuda_triangle/: CMakeLists.txt  common.h  cuda_triangle_kernel.cu  cuda_triangle_kernel.h  cuda_triangle_main.cu  image_writer.cpp  image_writer.hpp
opengl_triangle/: CMakeLists.txt  opengl_triangle.cpp
